[package]
name = "stellar"
version = "0.1.2-alpha"

authors = [
    "Stephen Oliver <steve@infincia.com>",
    "Maciej Hirsz <hello@maciej.codes>",
]
license = "MIT AND (MIT OR Apache-2.0)"
homepage = "https://github.com/maciejhirsz/tiny-bip39/"
repository = "https://github.com/maciejhirsz/tiny-bip39/"
readme = "README.md"
description = "A fork of the bip39 crate with fixes to v0.6. Rust implementation of BIP-0039"
documentation = "https://docs.rs/tiny-bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]
edition = "2018"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []
default-langs = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"]

default = ["default-langs", "rand"]

[dependencies]
stellar-rst = { version = "0.1.2-alpha" }
thiserror = "1.0.31"
rustc-hash = "1.1.0"
sha2 = "0.10"
pbkdf2 = { version = "0.12.0", default-features = false, features = ["hmac"] }
rand = { version = "0.8.5", optional = true }
once_cell = "1.12.0"
unicode-normalization = "0.1.19"
zeroize = { version = "1.5.5", features = ["zeroize_derive"] }
ed25519-dalek = "2.0"

stellar-strkey = "0.0.7"

chrono = "0.4"
hex = "0.4"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = "0.12.24"
clap = { version = "4.5.51", features = ["derive"] }
stellar_sdk = "0.1.4"
getrandom = { version = "0.2.16", features = ["js"] }

[patch.crates-io]
stellar-base = { git = "https://github.com/dancercasey/stellar-base-nsf.git", branch = "main" }

[dev-dependencies]
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"


